# also

./: 1.bench  CMakeLists.txt  FIX_SUMMARY.md  STP_FIX_DOCUMENTATION.md  test_simple.v  test_stp_decomposition.sh
build-ninja/: .ninja_deps  .ninja_log  1.bench  1x.bench  2.bench  2x.bench  CMakeCache.txt  build.ninja  cmake_install.cmake
build-ninja/lib/: cmake_install.cmake
build-ninja/lib/alice/: cmake_install.cmake
build-ninja/lib/alice/include/: cmake_install.cmake
build-ninja/lib/alice/lib/: cmake_install.cmake
build-ninja/lib/alice/lib/pybind11/: cmake_install.cmake
build-ninja/lib/nbulsi-mockturtle/: cmake_install.cmake
build-ninja/lib/nbulsi-mockturtle/include/: cmake_install.cmake
build-ninja/lib/nbulsi-mockturtle/lib/: cmake_install.cmake
build-ninja/lib/nbulsi-mockturtle/lib/abcesop/: cmake_install.cmake
build-ninja/lib/nbulsi-mockturtle/lib/abcsat/: cmake_install.cmake
build-ninja/lib/stp/: cmake_install.cmake
build-ninja/lib/stp/lib/: cmake_install.cmake
build-ninja/lib/stp/src/: cmake_install.cmake
build-ninja/src/: cmake_install.cmake
lib/: CMakeLists.txt
lib/nbulsi-mockturtle/include/mockturtle/algorithms/: klut_to_graph.hpp
lib/nbulsi-mockturtle/test/algorithms/node_resynthesis/: exact.cpp
lib/stp/: CMakeLists.txt
lib/stp/lib/: CMakeLists.txt
lib/stp/src/: CMakeLists.txt
lib/stp/src/include/algorithms/: bi_dec_else_dec.hpp  bi_decomposition.hpp  dsd_else_dec copy.hpp  dsd_else_dec.hpp  node_global.hpp  reorder.hpp  stp_dsd.hpp  strong_dsd.hpp  strong_else_dec copy.hpp  strong_else_dec.hpp
lib/stp/src/include/api/: truth_table.hpp
src/: CMakeLists.txt  also.cpp  my.cpp
src/commands/: balance.hpp  dc.hpp  decomp_flow.hpp  lc.hpp  lut_mapping.hpp  lut_resyn.hpp
src/core/: flow_detail.hpp
src/core/structural_choice/: aig_choice_compute.hpp  choice_lut_mapper.hpp  mig_choice_compute.hpp  xag_choice_compute.hpp  xmg_choice_compute.hpp
src/networks/aoig/: aoig.hpp  run_stp_dsd.hpp  stp_bidec_resynthesis.hpp  stp_dec.hpp  stp_dsd_resynthesis.hpp  stp_mix_dsd_resynthesis.hpp  xag_dec.hpp
stp/src/commands/: write_bench.hpp
